[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "repl_python3_DiscordBot"
version = "0.1.0"
[tool.poetry.dependencies]
Flask = "^2.0.2"
google-api-python-client = "^2.24.0"
nextcord = "^2.0.0-alpha.3"
num2words = "^0.5.10"
psutil = "^5.8.0"
python = "^3.8"
timeago = "^1.0.15"
"alexflipnote.py" = "^2.4.0"
jishaku = "^2.3.0"
PyNaCl = "^1.4.0"
pytz = "^2021.3"
"backports.zoneinfo" = "^0.2.1"
configparser = "^5.0.2"
Js2Py = "^0.71"
wavelink = "^1.2.5"
easy-pil = "^0.1.6"
[tool.poetry.dev-dependencies]
